<resources>
    <string name="app_name">Lugares</string>
    <string name="tv_email">Correo</string>
    <string name="tv_pass">Contraseña</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lugar">Lugares</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_name">Nombre del lugar</string>
    <string name="msg_email">Email (correo@xxx.xx)</string>
    <string name="msg_phone">Telefono (88888888)</string>
    <string name="msg_web">Sitio web</string>
    <string name="msg_add_place">Agregar lugar</string>
    <string name="msg_update_place">Actualizar lugar</string>
    <string name="msg_added_place">Lugar agregado</string>
    <string name="msg_updated_place">Lugar modificado</string>
    <string name="msg_missing_data">Datos faltantes</string>

    <string name="msg_delete_place">Eliminar lugar</string>
    <string name="msg_deleted_place">Lugar elimindao</string>
    <string name="msg_ask_to_delete">¿Seguro desea eliminar el lugar?</string>

    <string name="msg_si">Si</string>
    <string name="msg_no">No</string>

    <string name="msg_enviar_correo">Enviar correo electrónico</string>
    <string name="msg_phone_call">Realizar llamada telefónica</string>
    <string name="msg_whatsapp_send">Enviar mensaje WhatsApp</string>
    <string name="msg_web_view">Abrir sitio Web</string>
    <string name="msg_map_view">Ver lugar en mapa</string>
    <string name="tv_latitud_lb">Latitud</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="msg_saludos">Saludos amigos</string>
    <string name="msg_mensaje_correo">Le escribo este correo para</string>
    <string name="error">Error</string>

</resources>